# ChangeLog for sys-fs/mdadm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/mdadm/ChangeLog,v 1.194 2015/04/11 20:51:01 robbat2 Exp $

*mdadm-3.3.2-r1 (11 Apr 2015)

  11 Apr 2015; Robin H. Johnson <robbat2@gentoo.org> +files/etc-default-mdadm,
  +mdadm-3.3.2-r1.ebuild, files/mdadm.weekly:
  Actually make the monthly auto-check work.

  04 Apr 2015; Mike Frysinger <vapier@gentoo.org> files/mdraid.confd,
  files/mdraid.rc:
  Add a conf.d setting to pass options to the assemble step #531604 by Adrian.

  04 Apr 2015; Mike Frysinger <vapier@gentoo.org> mdadm-3.3.1-r2.ebuild:
  Mark ia64/ppc64/sparc stable #520342.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> mdadm-3.3.1-r2.ebuild:
  Stable for ppc, wrt bug #520342

  21 Nov 2014; Tobias Klausmann <klausman@gentoo.org> mdadm-3.3.1-r2.ebuild:
  Stable on alpha, bug 520342

  13 Sep 2014; Markus Meier <maekke@gentoo.org> mdadm-3.3.1-r2.ebuild:
  arm stable, bug #520342

  28 Aug 2014; Jeroen Roovers <jer@gentoo.org> mdadm-3.3.1-r2.ebuild:
  Stable for HPPA (bug #520342).

  22 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> mdadm-3.3.1-r2.ebuild:
  amd64/x86 stable wrt #520342

*mdadm-3.3.2 (21 Aug 2014)

  21 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> +mdadm-3.3.2.ebuild:
  Version bump.

  18 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> mdadm-3.3.1-r2.ebuild:
  Stop defining MAP_DIR in the ebuild because it's the default wrt http://git.ne
  il.brown.name/?p=mdadm.git;a=commit;h=96fd06edce9ae2d41908b9703642dfe50f376ca9

  18 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> -mdadm-3.3-r4.ebuild,
  -mdadm-3.3.1-r1.ebuild, -files/mdadm.service-r1:
  old

*mdadm-3.3.1-r2 (18 Jul 2014)

  18 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  +files/mdadm-3.3.1-DDF-validate-metadata_update-size-before-using-it.patch,
  +files/mdadm-3.3.1-Grow-Do-not-try-to-restart-if-reshape-is-running.patch,