@@ -9,6 +9,6 @@ LICENSE=GPL-2
 RDEPEND=>=sys-apps/util-linux-2.16
 RESTRICT=test
 SLOT=0
-SRC_URI=mirror://kernel/linux/utils/raid/mdadm/mdadm-3.3.2.tar.xz mirror://debian/pool/main/m/mdadm/mdadm_3.3-2.debian.tar.gz
+SRC_URI=mirror://kernel/linux/utils/raid/mdadm/mdadm-3.3.3.tar.xz mirror://debian/pool/main/m/mdadm/mdadm_3.3-2.debian.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	42408102d713fbad60ca21349865edb4	udev	da001465a2e939c93f7ae16947ce3438
 _md5_=fe40477c4594948374a1970577cf2b62
